opam-version: "2.0"
version: "1.2.4"
synopsis: "Time and calendar library"
maintainer: ["mefyl <mefyl@gruntech.org>"]
authors: ["mefyl <mefyl@gruntech.org>"]
license: "LGPL-3.0-or-later"
homepage: "https://github.com/mefyl/timmy"
bug-reports: "https://github.com/mefyl/timmy/issues"
depends: [
  "dune" {>= "3.20"}
  "base-windows"
  "fmt-windows" {>= "0.8.7"}
  "ocaml-windows" {>= "4.08.0"}
  "ppx_here"
  "ppx_here-windows"
  "ppx_deriving" {>= "5.0"}
  "ppx_deriving-windows" {>= "5.0"}
  "ptime-windows"
]
depopts: ["schematic-windows"]
conflicts: [
  "schematic" {< "0.21.2" | >= "0.23.0"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-x" "windows" "-p" "timmy" "-j" jobs "@install"]
]
dev-repo: "git+https://github.com/mefyl/timmy.git"
x-maintenance-intent: ["(latest)"]
pin-depends: [
  [
    "alcotest.1.9.1"
    "git+https://github.com/mefyl/alcotest#33daa1817c4c05536f0a9f5f3b817a5f3799b829"
  ]
  [
    "bytesrw.0.3.0"
    "git+https://github.com/dbuenzli/bytesrw#47bdebcbc527c264572fb5fbcc5ca606e67bcd32"
  ]
]
