(include_subdirs unqualified)

(library
 (name timmy_jsoo)
 (public_name timmy-jsoo)
 (libraries
  fmt
  js_of_ocaml
  timmy
  timmy-jsoo.clock
  (select
   js_decode.ml
   from
   (schematic-jsoo -> js_decode.enabled.ml)
   (!schematic-jsoo -> js_decode.disabled.ml)))
 (optional)
 (preprocess
  (pps js_of_ocaml-ppx ppx_here)))
