(include_subdirs unqualified)

(generate_sites_module
 (module Timmy_unix_sites)
 (sites timmy-unix))

(library
 (name clock_unix)
 (public_name timmy-unix.clock)
 (libraries fmt ptime.clock.os timmy dune-site)
 (foreign_stubs
  (language cxx)
  (flags -ldopt -lstdc++ -ldopt -Wl,-shared-libgcc -std=c++20 -DHAS_REMOTE_API=0)
  (include_dirs vendor/date/include)
  (names timezone tz))
 (implements clock))

(install
 (package timmy-unix)
 (section
  (site
   (timmy-unix data)))
 (source_trees
  (vendor/tzdata as tzdata)))
