(include_subdirs unqualified)

(library
 (name timmy)
 (public_name timmy)
 (libraries
  base
  fmt
  ptime
  (select
   type.ml
   from
   (schematic -> type.schematic.ml)
   (!schematic -> type.noschematic.ml))
  (select
   type_js.ml
   from
   (js_of_ocaml -> type_js.js.ml)
   (!js_of_ocaml -> type_js.nojs.ml)))
 (preprocess
  (pps ppx_here ppx_deriving.eq ppx_deriving.ord)))
