(executable
 (name test)
 (libraries
  alcotest
  ptime
  timmy
  (select
   schemas.ml
   from
   (schematic -> schemas.schematic.ml)
   (!schematic -> schemas.noschematic.ml)))
 (modules schemas test testable)
 (preprocess
  (pps ppx_here)))

(rule
 (alias runtest)
 (action
  (run ./test.exe)))

(library
 (name clock_tests)
 (libraries alcotest timmy timmy.clock)
 (modules clock_tests)
 (preprocess
  (pps ppx_here)))
